# NeoRadarVSID

./: .gitignore  .gitmodules  CMakeLists LOCALCOMPILE.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  vcpkg.json
.github/workflows/: ci.yml
sdk/: SDK.h
src/: NeoVSID.cpp  NeoVSID.h  Version.h.in  main.cpp
src/config/: AircraftData.json  Colors.h  config.json  lfmn.json  lfpg.json  lists.yaml
src/core/: CompileCommands.h  DataManager.cpp  DataManager.h  NeoVSIDCommandProvider.h  TagFunctions.h  TagItems.h  TagItemsColor.h
src/log/: Logger.cpp  Logger.h
src/utils/: Color.h  Format.h
